--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,13 @@
+:root {
+    --dark-background: #202225;
+    --second-background: #2f3136;
+    --main-background: #36393f;
+
+    --main-color: #96989d;
+    --second-color: #b9bbbe;
+    --accent-color: #42464d;
+}
+
 body {
     margin: 0px;
     overflow-x: hidden;
@@ -5,13 +15,17 @@ body {
 }
 
 .background {
-    background-color: #36393f;
+    background-color: var(--main-background);
     height: 100%;
     width: 100%;
     padding-bottom: 50px;
+    z-index: -5 !important;
 }
 
-
+canvas {
+    position: absolute;
+    z-index: 0 !important;
+}
 
 .sidebar {
     height: 100%;
@@ -20,10 +34,10 @@ body {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #2f3136;
+    background-color: var(--second-background);
     overflow-x: hidden;
     padding: 20px;
-    color: #96989d;
+    color: var(--main-color);
     font-size: 3rem;
     text-align: center;
 }
@@ -34,7 +48,9 @@ body {
     overflow-x: hidden;
     max-width: 700px;
     min-width: 500px;
+    z-index: 1 !important;
 }
+
 
 .name {
     font-size: 4rem;
@@ -43,33 +59,35 @@ body {
     background-size: 100%;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    margin: 10px 0px;
 }
 .name.sub {
+    margin: 30px 0px 10px 0px;
     font-size: 2rem;
 }
 
+
 .text-header {
-    color: #96989d;
+    color: var(--main-color);
     font-size: 1.5rem;
     font-weight: bold;
     text-align: left;
 }
 
 .text-body {
-    color: #96989d;
+    color: var(--main-color);
     font-size: 1rem;
 }
 
+
 .section {
-    background-color: #42464d;
+    background-color: var(--accent-color);
     height: 100%;
     width: 100%;
     border-radius: 15px;
     padding: 10px;
 }
 .section.project:hover {
-    transform: scale(1.05);
+    transform: scale(1.03);
     transition: transform 150ms ease-in-out;
 }
 
@@ -80,6 +98,7 @@ body {
     margin-bottom: 40px;
 }
 
+
 .project-img {
     width: 100%;
     border-radius: 10px;
@@ -89,4 +108,44 @@ body {
     z-index: 1;
     position: absolute;
     font-size: 50px;
+}
+
+.project-language-icon {
+    background-color: var(--accent-color);
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 50px;
+    color: white;
+    position: relative; top: 0px; right: 10px;
+}
+
+
+.skill-icon {
+    padding: 15px;
+    font-size: 50px;
+    color:var(--main-color);
+}
+.skill-icon:hover {
+    color:#e3e3e3;
+    transform: scale(1.1);
+    transition: transform 150ms ease-in-out;
+}
+
+i[title]:hover:after {
+    font-size: 15px;
+    border-radius: 10px;
+    content: attr(title);
+    padding: 10px 10px;
+    position: absolute;
+    left: 50%;
+    top: 75%;
+    z-index: 1;
+    background: var(--dark-background);
+    font-family: "Roboto", sans-serif;
+}
+
+.skill-grid {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    text-align: center;
 }
