added sidebar nav buttons + various improvements

--- a/src/main.css
+++ b/src/main.css
@@ -6,12 +6,13 @@
     --main-color: #96989d;
     --second-color: #b9bbbe;
     --accent-color: #42464d;
+    --white-color: #e3e3e3;
 }
 
 body {
     margin: 0px;
     overflow-x: hidden;
-    font-family: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif !important;
 }
 
 .background {
@@ -19,13 +20,32 @@ body {
     height: 100%;
     width: 100%;
     padding-bottom: 50px;
-    z-index: -5 !important;
+
+    display: grid;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
 }
 
-canvas {
-    position: absolute;
-    z-index: 0 !important;
+
+
+.padding-tb-10 {
+    padding: 10px 0px !important;
 }
+.margin-t-25 {
+    margin-top: 25px !important;
+}
+.margin-b-15 {
+    margin-bottom: 15px !important;
+}
+.margin-b-10 {
+    margin-bottom: 10px !important;
+}
+.padding-15 {
+    padding: 15px !important;
+}
+
+
 
 .sidebar {
     height: 100%;
@@ -42,13 +62,36 @@ canvas {
     text-align: center;
 }
 
+.sidebar-icon {
+    font-size: 50px;
+    padding: 30px 15px;
+    color: var(--main-color);
+}
+.sidebar-icon:hover {
+    color: var(--white-color);
+    transform: scale(1.1);
+    transition: transform 150ms ease-in-out;
+}
+
+.sidebar-grid {
+    display: grid;
+}
+
+
+
+.vertical-center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+
 .main {
-    margin-left: 120px;
     padding: 20px 10% 0px 10%;
     overflow-x: hidden;
     max-width: 700px;
-    min-width: 500px;
-    z-index: 1 !important;
+    min-width: 700px;
 }
 
 
@@ -61,7 +104,6 @@ canvas {
     -webkit-text-fill-color: transparent;
 }
 .name.sub {
-    margin: 30px 0px 10px 0px;
     font-size: 2rem;
 }
 
@@ -70,7 +112,12 @@ canvas {
     color: var(--main-color);
     font-size: 1.5rem;
     font-weight: bold;
-    text-align: left;
+}
+
+.text-subheader {
+    color: var(--main-color);
+    font-size: 1.2rem;
+    font-weight: bold;
 }
 
 .text-body {
@@ -78,17 +125,8 @@ canvas {
     font-size: 1rem;
 }
 
-
-.section {
-    background-color: var(--accent-color);
-    height: 100%;
-    width: 100%;
-    border-radius: 15px;
-    padding: 10px;
-}
-.section.project:hover {
-    transform: scale(1.03);
-    transition: transform 150ms ease-in-out;
+.link-label {
+    width: 80px;
 }
 
 .section-container {
@@ -96,6 +134,20 @@ canvas {
     grid-template-columns: repeat(2, 1fr);
     gap: 40px;
     margin-bottom: 40px;
+}
+
+.section {
+    background-color: var(--accent-color);
+    color: var(--main-color);
+    height: min-content;
+    width: 100%;
+    border-radius: 15px;
+    padding: 10px;
+}
+.section.project:hover {
+    transform: scale(1.03);
+    transition: transform 150ms ease-in-out;
+    color: var(--white-color);
 }
 
 
@@ -115,20 +167,63 @@ canvas {
     padding: 10px;
     border-radius: 10px;
     font-size: 50px;
-    color: white;
+    color: var(--white-color);
     position: relative; top: 0px; right: 10px;
+}
+
+.project-header {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.project-body {
+    font-size: 1rem;
 }
 
 
 .skill-icon {
     padding: 15px;
     font-size: 50px;
-    color:var(--main-color);
+    color: var(--main-color);
 }
 .skill-icon:hover {
-    color:#e3e3e3;
+    color: var(--white-color);
     transform: scale(1.1);
     transition: transform 150ms ease-in-out;
+}
+
+.skill-grid {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    text-align: center;
+}
+
+.skill-header {
+    padding: 10px 25px 0px 25px;
+}
+
+.link-grid {
+    display: grid;
+    grid-template-columns: repeat(4, min-content);
+    text-align: center;
+    justify-content: space-between;
+}
+
+.link-icon {
+    font-size: 50px;
+    padding: 20px;
+    color:var(--main-color);
+    display: grid;
+    row-gap: 10px;
+}
+.link-icon:hover {
+    color: var(--white-color);
+    transform: scale(1.1);
+    transition: transform 150ms ease-in-out;
+}
+
+.link-label {
+    font-size: 20px;
 }
 
 i[title]:hover:after {
@@ -142,10 +237,4 @@ i[title]:hover:after {
     z-index: 1;
     background: var(--dark-background);
     font-family: "Roboto", sans-serif;
-}
-
-.skill-grid {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    text-align: center;
 }
